Fix overflow issues

--- a/src/components/tables/tables.module.css
+++ b/src/components/tables/tables.module.css
@@ -8,7 +8,7 @@
 
 .details > summary {
     background-color: unset;
-    padding: 1em 3em 1em 0;
+    padding: .25em 3em .25em 0;
     width: fit-content;
 }
 
