--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  word-break: break-word;
   font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
